--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <img src="weather.jpg" alt="weather" class="body img">
 <div class="bodybox">
 <p class="temp">0 <sup> °C</sup></p>
-<p class="discription">light rain</p>
+<p class="Description">light rain</p>
 
 <div class="details">
 <div class="humidity">
