--- a/movie.html
+++ b/movie.html
@@ -5,18 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="movie.css">
+
+    
 </head>
 <body>
     <div class="container">
         <h1>movie Search api</h1>
         <div class="count">
+            <form action="">
             <input type="text" placeholder="Enter your movie">
             <button>Search</button>
+        </form>
         </div>
         <div class="img-container">
 
         </div>
         
     </div>
+   <script src="movie.js"></script>
 </body>
 </html>
